<resources>
    <string name="app_name">IV English</string>
    <string name="play">Play</string>
    <string name="verb">verb</string>
    <string name="to_be">to be</string>
    <string name="cue">Cue</string>
    <string name="infinitive">Infinitive</string>
    <string name="particle">Particle</string>
    <string name="preterit">Preterit</string>
    <string name="your_score">Your Score</string>
    <string name="_20">20</string>
    <string name="by">by</string>
    <string name="home">Home</string>
</resources>
